[gd_scene load_steps=2 format=3 uid="uid://c3r3oxtqe785v"]

[ext_resource type="Script" path="res://Main/tutorial.gd" id="1_3rf23"]

[node name="tutorial" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rf23")
min = 1
max = 10

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.223529, 0.337255, 0.705882, 1)
metadata/_edit_lock_ = true

[node name="AddNumButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -92.0
offset_right = 96.0
offset_bottom = 92.0
grow_horizontal = 2
grow_vertical = 2
text = "Add Number"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
text = "Save
"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1024.0
offset_right = 1152.0
offset_bottom = 128.0
text = "Load"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 520.0
offset_right = 936.0
offset_bottom = 576.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="AddNumButton" to="." method="_on_add_num_button_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_button_pressed"]
